<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">InformaCam</string>
    <string name="app_name_label">InformaCam</string>
    <string name="image_preview">InformaCam Image Preview</string>
	<string name="SplashTextViewString">InformaCam</string>
	<string name="CreditsTextViewString">Powered by the Guardian Project and Witness</string>
	<string name="WalkThroughSkipButton">Skip</string>
	<string name="WalkThroughContinueButton">Continue</string>
	<string name="WalkThroughTextView">This is an application which helps protect the privacy of individuals that may appear in pictures.</string>
	<string name="WalkThroughPrefSliderLabel">Select Risk Level</string>
    <string name="menu_new_region">New Tag</string>
    <string name="menu_panic">Panic</string>
 	<string name="menu_image_prefs">Image Prefs</string>
    <string name="menu_save">Save</string>
    <string name="menu_share">Share</string>
    <string name="menu_prefs">Preferences</string>
    <string name="menu_about">About InformaCam</string>
    <string name="menu_logout">Logout</string>
    <string name="imgprefs_eraseexif">Erase All Exif Data</string>
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="done">Done</string>
    <string name="saving">Saving...</string>
    
    <string name="idtaggerh1">Identify</string>
    <string name="idtaggerh12">Consentify</string>
    <string name="idtaggerp">Type a name (or any identifier), or choose from people you\'ve already tagged.</string>
    <string name="idtaggerp2">Check this box if you have your subject\s verbal consent to record his/her image.</string>
    <string name="idtaggersubmit">Submit</string>
    <string name="encrypttaggerh1">Encrypt This Tag</string>
    <string name="encrypttaggerp">You can encrypt the selected region to a specific set of public keys, so that only the key holders will be able to view the original image region.</string>
    <string name="encrypttaggerhint">Tap To Choose</string>
    
    <string name="confirm_delete">Do you want to delete the original media file?</string>
    <string name="confirm_delete_region">Are you sure you want to remove this region box?</string>
    
    <!-- Informa Options -->
    <string name="informaOpt_consent">Subject has given his/her informed consent to be photographed.</string>
    <string name="informaOpt_autoFilter">Automatically apply this type of filter each time this person appears in an ObscuraCam photo.</string>
    
    <string name="mdHumanReadable_intro">Image taken with/modified by ObscuraCam.</string>
    <string name="mdHumanReadable_onDate">Image saved on:</string>
    <string name="mdHumanReadable_numTags">Number of edited regions in this image:</string>
    <string name="mdHumanReadable_consentIntro">Subjects contained in this image:</string>
    <string name="mdHumanReadable_psudonym">Name/Pseudonym:</string>
    <string name="mdHumanReadable_coordinates">Coordinates within this image:</string>
    <string name="mdHumanReadable_consentGiven">Informed consent given?</string>
    <string name="mdHumanReadable_persistObfuscation">Apply same obfuscation settings to this subject in every photo?</string>
    
     <!-- APG related -->
    <string name="apg_error_activity_not_found">No suitable application for this action found.</string>
    <string name="apg_error_apg_version_not_supported">The installed APG version is not supported.</string>
    <string name="apg_btn_crypto_sign">Sign</string>
    <string name="apg_btn_encrypt">Encrypt</string>
    <string name="apg_btn_decrypt">Decrypt</string>
    <string name="apg_btn_verify">Verify</string>
    <string name="apg_btn_select">Select</string>
    
    <string name="unknown_crypto_signature_user_id">&lt;unknown&gt;</string>
    <string name="key_id">id: %s</string>
    <string name="insufficient_apg_permissions">This app doesn\'t have permission to access APG fully, please reinstall the app to fix that.</string>
    <string name="pgp_mime_unsupported">PGP/MIME messages are not supported yet.</string>
    <string name="attachment_encryption_unsupported">Warning: attachments are NOT signed or encrypted yet.</string>
    <string name="send_aborted">Send aborted.</string>
    <string name="menu_delete_original">Delete Original</string>
    <string name="menu_preview">Preview</string>
    
    <string name="loading_image">Loading photo...</string>
    
    <string name="about">This app was developed by the SecureSmartCam Team, a joint effort by WITNESS and the Guardian Project.</string>

	<string name="about2">Learn more at http://witness.org and https://guardianproject.info</string>
	
	<string name="about3">This software is freely licensed under the GNU GPL v3.</string>
	
	<!--  BASIC STRINGS -->
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="_continue">Continue</string>
	<string name="cancel">Cancel</string>
	
	<!--  LOG IN ACTIVITY -->
	<string name="login">Log In</string>
	<string name="login_text">Please enter your password to continue</string>
	<string name="login_fail">Your password is incorrect.  Please try again</string>
	
	<!--  INFORMA TAGGER -->
	<string name="tagger_no_name_error">You haven\'t identified anyone!</string>
	<string name="tagger_informed_consent_question">This subject given his/her informed consent to appear in this image</string>
	<string name="tagger_subject_filter_preference_question">InformaCam should attempt to add the same image filter to the subject in every image</string>
	
	<!--  INFORMA KEY CHOOSER  -->
	<string name="chooser_prompt">Select trusted destinations for your image:</string>
	<string name="chooser_no_choice_warning_title">Wait!</string>
	<string name="chooser_no_choice_warning_text">You have not selected any trusted destinations.  Continue anyway?\nWarning: your image will be redacted, but metadata will not be saved.</string>
	
	<!--  INFORMA CONFIRM ACTIVITY -->
	<string name="informaConfirm_title">Images Saved</string>
	<string name="informaConfirm_text">Your image has been saved and is now being encrypted and sent to your trusted destinations.</string>
	<string name="informaConfirm_btn_view">View Image</string>
	<string name="informaConfirm_btn_quit">Quit Informa</string>
	<string name="informaConfirm_btn_takeAnother">Take Another Image</string>
	
	<!--  EULA related -->
    <string name="eula_title">You agree to:</string>
    <string name="eula_accept">Accept</string>
    <string name="eula_refuse">Refuse</string>
    
    <!--  INFORMA PREFERENCES -->
    <string name="ip_title">Informa Preferences</string>
    <string name="ip_enter_pw">Please enter your InformaCam database password to continue:</string>
    <string name="informaPref_label">Informa Preferences</string>
	<string name="informaPref_dbpw">Database Password</string>
	<string name="informaPref_dbpw_sum">Set your password to your encrypted media database:</string>
	<string name="informaPref_dbpw_notfound">You haven\'t set a password for the database yet.</string>
	<string name="informaPref_destKeys">Trusted Destinations</string>
	<string name="informaPref_destKeys_sum">Add/Edit trusted destinations for your encrypted media:</string>
	<string name="informaPref_destKeys_add">Add new trusted destination</string>
	<string name="informaPref_destKeys_notfound">Could not find APG key with this email address.</string>
	<string name="informaPrefs_newkey_label">New Trusted Destination</string>
	<string name="informaPrefs_keyalias">Destination Name:</string>
	<string name="informaPrefs_keyemail">Destination Email:</string>
	<string name="informaPrefs_trustedDestinations_title">Trusted Destinations</string>
	<string name="informaPrefs_trustedDestinations_prompt">Manage your trusted destinations...</string>
	
	<!--  INFORMA TRUSTED DESTINATIONS MANAGER -->
	<string name="tdmanager_title">Trusted Destinations Manager</string>
	<string name="tdmanager_add_new">Import new PGP contacts</string>
	<string name="tdmanager_no_contacts">You do not have any PGP contacts yet!</string>
    
    <!--  WIZARD related -->
    <string name="wizard_main_title">Setup Wizard</string>
    <string name="wizard_error_password_too_short">Please choose a password of 6 or more characters.</string>
    <string name="wizard_error_no_apg">APG cannot be detected on the device.  Are you sure you have it installed?</string>
    
    <!--  GLOBAL PREFERENCES related -->
    <string name="preferences_label">InformaCam Preferences</string>
    <string name="preferences_cache_label">Login Options</string>
    <string name="preferences_cache_text">How long should you stay logged in to the app?  If you choose "always," you must manually log out of the app (through the main menu.)</string>
    <string name="preferences_image_handling_label">Image Handling</string>
    <string name="preferences_image_handling_text">What should the app do with your original images?</string>
    <string name="preferences_language_label">Language</string>
    <string name="preferences_language_text">What language should the app use?</string>
</resources>
