<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<ListPreference
		android:title="@string/preferences_language_label"
		android:summary="@string/preferences_language_text"
		android:defaultValue="0"
		android:entries="@array/default_language"
		android:entryValues="@array/default_language_values"
		android:key="obscura.language" />
	<ListPreference
		android:title="@string/preferences_cache_label"
		android:summary="@string/preferences_cache_text"
		android:defaultValue="200"
		android:entries="@array/password_cache"
		android:entryValues="@array/password_cache_values"
		android:key="informa.PasswordCacheTimeout" />
	<ListPreference
		android:title="@string/preferences_image_handling_label"
		android:summary="@string/preferences_image_handling_text"
		android:defaultValue="300"
		android:entries="@array/default_image_handling"
		android:entryValues="@array/default_image_handling_values"
		android:key="informa.DefaultImageHandling" />
	<PreferenceCategory
		android:title="@string/informaPrefs_trustedDestinations_title"
		android:id="@+id/trustedDestinations_holder" />
	
</PreferenceScreen>