<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/menu_new_region"
        android:title="@string/menu_new_region"
        android:icon="@drawable/ic_menu_new_region" />
        
    <item android:id="@+id/menu_panic"
        android:title="@string/menu_panic"
        android:icon="@drawable/ic_menu_panic" />

    <item android:id="@+id/menu_image_prefs"
        android:title="@string/menu_image_prefs"
        android:icon="@drawable/ic_menu_image_prefs" />

    <item android:id="@+id/menu_save"
        android:title="@string/menu_save"
        android:icon="@drawable/ic_menu_save" />

    <item android:id="@+id/menu_share"
        android:title="@string/menu_share"
        android:icon="@drawable/ic_menu_share" />

    <item android:id="@+id/menu_send_hash"
        android:title="@string/menu_send_hash"
        android:icon="@drawable/ic_menu_send_hash" />
        
</menu>
