<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#000000"
    android:weightSum="1.0" >
    <TextView
        android:text="@string/informaPref_label"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:textSize="24dp"
    	android:layout_weight="0.1" />
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="0.8">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/informaPref_dbpw"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold" />
            <TextView 
                android:text="@string/informaPref_dbpw_sum"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/informaPref_dbpw"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
            <TextView 
                android:text="@string/informaPref_destKeys"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold" />
            <TextView 
                android:text="@string/informaPref_destKeys_sum"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
            <Button 
                android:text="@string/informaPref_destKeys_add"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/informaPref_destKeys_ADD" />
            <ListView
                android:id="@+id/informaPref_destKeys"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="0.1"
        android:text="@string/ok"
        android:id="@+id/informaPref_OK" />
</LinearLayout>