<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical">
	<TextView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:textStyle="bold"
		android:textSize="24px"
		android:text="@string/encrypttaggerh1" />
	<TextView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/encrypttaggerp" />
	<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:weightSum="1.0"
		android:orientation="horizontal">
		<EditText
			android:layout_width="0dip"
			android:layout_height="wrap_content"
			android:id="@+id/namespace"
			android:layout_weight="0.9" 
			android:hint="@string/encrypttaggerhint"
			/>
			
		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight=".1"
			android:id="@+id/selectKey"
			android:text="@string/apg_btn_select"
			android:adjustViewBounds="true" />
			<!-- 
		<ImageButton
			android:layout_width="0dip"
			android:layout_height="wrap_content"
			android:layout_weight="0.2"
			android:id="@+id/confirmTag"
			android:background="#ff000000"
			android:adjustViewBounds="true"
			android:src="@drawable/confirmtagbutton" />
			 -->
	</LinearLayout>
	<ListView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:id="@+id/tagSuggestionsHolder" />
	
</LinearLayout>
