<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="1.0" >
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="0.05"
        android:id="@+id/wizard_progress"
        android:orientation="horizontal" />
    <TextView
    	android:layout_width="fill_parent"
    	android:layout_height="0dip"
    	android:layout_weight="0.1"
    	android:text="@string/wizard_main_title" />
   	<ScrollView
   	    android:layout_width="fill_parent"
   	    android:layout_height="0dip"
   	    android:layout_weight="0.75"
   	    android:id="@+id/wizard_sv" />
   	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   	    android:layout_width="fill_parent"
   	    android:layout_height="0dip"
   	    android:layout_weight="0.1"
   	    android:orientation="horizontal"
   	    android:weightSum="1.0">
   	    <Button
   	        android:layout_width="0dip"
   	        android:layout_height="fill_parent"
   	        android:layout_weight="0.5"
   	        android:id="@+id/wizard_back"
   	        android:text="@string/back" />
   	    <Button
   	        android:layout_width="0dip"
   	        android:layout_height="fill_parent"
   	        android:layout_weight="0.5"
   	        android:id="@+id/wizard_next"
   	        android:text="@string/next" />
   	</LinearLayout>

    

</LinearLayout>